# cppotp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENSE
lib/: CMakeLists.txt  otp.cc
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  otp.cc  otp.h  otp_test  otp_test.cc
test/: otp-test.cc
